add new website from server na

--- a/xem-phim-bo/mi-nu-va-quy-ngai-lang-man/index.html
+++ b/xem-phim-bo/mi-nu-va-quy-ngai-lang-man/index.html
@@ -1194,7 +1194,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1774,18 +1774,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/spongebob-anh-hung-len-can" title="SpongeBob: Anh Hùng Lên Cạn">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-quan-sat" title="Người Quan Sát">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/spongebob-anh-hung-len-can-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-quan-sat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             SpongeBob: Anh Hùng Lên Cạn
+             Người Quan Sát
             </span>
             <span class="list-top-movie-item-en">
-             The SpongeBob Movie: Sponge Out of Water
+             Watcher
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doi-cau-long-thieu-nien" title="Đội Cầu Lông Thiếu Niên">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-cau-long-thieu-nien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đội Cầu Lông Thiếu Niên
+            </span>
+            <span class="list-top-movie-item-en">
+             Racket Boys
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1796,21 +1818,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-gai-ngot-ngao" title="Cô Gái Ngọt Ngào">
+          <a class="list-top-movie-link" href="/phim-moi/khu-rung-nho-cua-hai-nguoi" title="Khu Rừng Nhỏ Của Hai Người">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-ngot-ngao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-rung-nho-cua-hai-nguoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Gái Ngọt Ngào
+             Khu Rừng Nhỏ Của Hai Người
             </span>
             <span class="list-top-movie-item-en">
-             Sweet Girl
+             A Romance of the Little Forest
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1818,18 +1840,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/foursome" title="Foursome">
+          <a class="list-top-movie-link" href="/phim-moi/tin-hieu-kich-dong" title="Tín Hiệu Kích Động">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/foursome-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tin-hieu-kich-dong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Foursome
+             Tín Hiệu Kích Động
             </span>
             <span class="list-top-movie-item-en">
-             Foursome
+             The Signal
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1840,43 +1862,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-monster" title="The Monster">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-quan-ly-dai-tai" title="Người quản lý đại tài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-monster-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-quan-ly-dai-tai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Monster
+             Người quản lý đại tài
             </span>
             <span class="list-top-movie-item-en">
-             The Monster
+             The Midas Touch
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/linh-cau" title="Linh cẩu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-cau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Linh cẩu
-            </span>
-            <span class="list-top-movie-item-en">
-             Hyena
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
