add new website from server na

--- a/xem-phim-bo/chau-ngoc-ke-ben/index.html
+++ b/xem-phim-bo/chau-ngoc-ke-ben/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1657,18 +1657,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-kien-nu-minh-tinh-mat-tich" title="Sự kiện nữ minh tinh mất tích">
+          <a class="list-top-movie-link" href="/phim-moi/biet-doi-san-ma-ky-nguyen-bang-gia" title="Biệt Đội Săn Ma: Kỷ Nguyên Băng Giá">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-kien-nu-minh-tinh-mat-tich-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-san-ma-ky-nguyen-bang-gia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sự kiện nữ minh tinh mất tích
+             Biệt Đội Săn Ma: Kỷ Nguyên Băng Giá
             </span>
             <span class="list-top-movie-item-en">
-             女明星失踪事件
+             Ghostbusters: Frozen Empire
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1679,62 +1679,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-dua-tre-cuoi-cung-tren-trai-dat-chuc-tan-the-vui-ve" title="Những đứa trẻ cuối cùng trên Trái Đất: Chúc tận thế vui vẻ">
+          <a class="list-top-movie-link" href="/phim-moi/star-wars-the-clone-wars" title="Star Wars: The Clone Wars">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-dua-tre-cuoi-cung-tren-trai-dat-chuc-tan-the-vui-ve-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-wars-the-clone-wars-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những đứa trẻ cuối cùng trên Trái Đất: Chúc tận thế vui vẻ
+             Star Wars: The Clone Wars
             </span>
             <span class="list-top-movie-item-en">
-             The Last Kids on Earth: Happy Apocalypse to You
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-gioi-ma" title="Thế Giới Ma">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-ma-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thế Giới Ma
-            </span>
-            <span class="list-top-movie-item-en">
-             Ghost World
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thoi-gian-chuyen-ve-kalief-browder" title="Thời gian: Chuyện về Kalief Browder">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoi-gian-chuyen-ve-kalief-browder-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thời gian: Chuyện về Kalief Browder
-            </span>
-            <span class="list-top-movie-item-en">
-             Time: The Kalief Browder Story
+             Star Wars: The Clone Wars
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1745,21 +1701,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/be-cool-scooby-doo-phan-2" title="Be Cool, Scooby-Doo! (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/hai-trinh-kon-tiki" title="Hải Trình Kon-Tiki">
            <span class="status">
-            HD Nosub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/be-cool-scooby-doo-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-trinh-kon-tiki-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Be Cool, Scooby-Doo! (Phần 2)
+             Hải Trình Kon-Tiki
             </span>
             <span class="list-top-movie-item-en">
-             Be Cool, Scooby-Doo! (Season 2)
+             Kon-Tiki
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/guong-den-phan-4" title="Gương Đen (Phần 4)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/guong-den-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gương Đen (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Black Mirror (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/drug-lords" title="Drug Lords">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/drug-lords-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Drug Lords
+            </span>
+            <span class="list-top-movie-item-en">
+             Drug Lords
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
